[package]
name = "si-conservation-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for SuperInstance conservation law"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
